--- a/apnidukaan/shop/templates/shop/base.html
+++ b/apnidukaan/shop/templates/shop/base.html
@@ -68,7 +68,7 @@
             <input class="form-control me-2" type="search" placeholder="Search products..." aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
-          <a href="#" class="btn btn-outline-secondary ms-2 d-flex align-items-center" style="height: 38px;">
+          <a href="cart" class="btn btn-outline-secondary ms-2 d-flex align-items-center" style="height: 38px;">
             <i class="bi bi-cart3 fs-5"></i>
           </a>
           <a href="#" class="btn btn-outline-secondary ms-2 d-flex align-items-center" style="height: 38px;">
